@@ -1,26 +1,38 @@
 package tfar.nabba.datagen.providers.loot;
 
-import net.minecraft.core.Registry;
-import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.data.loot.BlockLootSubProvider;
+import net.minecraft.world.flag.FeatureFlagSet;
+import net.minecraft.world.flag.FeatureFlags;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.level.block.Block;
+import net.minecraft.world.level.block.Blocks;
 import net.minecraft.world.level.storage.loot.LootPool;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.entries.LootItem;
 import net.minecraft.world.level.storage.loot.functions.CopyBlockState;
 import net.minecraft.world.level.storage.loot.functions.CopyNbtFunction;
+import net.minecraft.world.level.storage.loot.functions.SetItemCountFunction;
 import net.minecraft.world.level.storage.loot.providers.nbt.ContextNbtProvider;
 import net.minecraft.world.level.storage.loot.providers.number.ConstantValue;
 import tfar.nabba.NABBA;
+import tfar.nabba.block.AbstractBarrelBlock;
 import tfar.nabba.block.BetterBarrelBlock;
+import tfar.nabba.block.SingleSlotBarrelBlock;
 import tfar.nabba.init.ModBlocks;
 import tfar.nabba.util.NBTKeys;
 
-import java.util.stream.Collectors;
+import java.util.List;
+import java.util.Set;
 
-public class ModBlockLoot extends BlockLoot {
+public class ModBlockLoot extends BlockLootSubProvider {
+
+    public ModBlockLoot() {
+        super(Set.of(), FeatureFlags.REGISTRY.allFlags());
+    }
 
     @Override
-    protected void addTables() {
+    protected void generate() {
         dropBarrel(ModBlocks.BETTER_BARREL);
         dropBarrel(ModBlocks.STONE_BETTER_BARREL);
         dropBarrel(ModBlocks.COPPER_BETTER_BARREL);
@@ -64,7 +76,7 @@ public class ModBlockLoot extends BlockLoot {
         LootTable.Builder builder = LootTable.lootTable()
                 .withPool(applyExplosionCondition(block, LootPool.lootPool().setRolls(ConstantValue.exactly(1.0F))
                                 .add(LootItem.lootTableItem(block)
-                                        .apply(copySharedBlockStates(block).copy(BetterBarrelBlock.LOCKED).copy(BetterBarrelBlock.CONNECTED).copy(BetterBarrelBlock.INFINITE_VENDING))
+                                        .apply(copySharedBlockStates(block).copy(BetterBarrelBlock.LOCKED).copy(BetterBarrelBlock.CONNECTED).copy(BetterBarrelBlock.INFINITE_VENDING).copy(SingleSlotBarrelBlock.STORAGE_DOWNGRADE))
                                         .apply(copySharedNBTInfo()
                                                 .copy(NBTKeys.Stack.name(), "BlockEntityTag." + NBTKeys.Stack)
                                                 .copy(NBTKeys.RealCount.name(), "BlockEntityTag." + NBTKeys.RealCount)
@@ -100,11 +112,13 @@ public class ModBlockLoot extends BlockLoot {
     }
 
     public CopyBlockState.Builder copySharedBlockStates(Block block) {
-        return CopyBlockState.copyState(block).copy(BetterBarrelBlock.DISCRETE).copy(BetterBarrelBlock.VOID);
+        return CopyBlockState.copyState(block).copy(BetterBarrelBlock.DISCRETE).copy(BetterBarrelBlock.VOID).copy(AbstractBarrelBlock.REDSTONE);
     }
 
     @Override
     protected Iterable<Block> getKnownBlocks() {
-        return Registry.BLOCK.stream().filter(block -> (Registry.BLOCK.getKey(block).getNamespace().equals(NABBA.MODID))).collect(Collectors.toList());
+        return BuiltInRegistries.BLOCK.stream()
+                .filter(block -> BuiltInRegistries.BLOCK.getKey(block).getNamespace().equals(NABBA.MODID))
+                .toList();
     }
 }
